test/compile_errors/err_effect_unknown_name.w
//! expect-error: unknown effect 'wriet' in @[effect]

@[effect(p: wriet)]
fn f(p: i32) -> i32:
    p

fn main:
    let _ = f(1)
